# RemoteLLMconnector

./: CLAUDE.md  Dockerfile  Dockerfile.connector  FUTURE_FEATURES.md  LICENSE  README.md  docker-compose.test.yml  pyproject.toml  test-users.yaml
.specify/memory/: constitution.md
deploy/: connectors.yaml.example  install-linux.sh  install-macos.sh
deploy/launchd/: com.remotellm.broker.plist  com.remotellm.connector.plist
deploy/systemd/: remotellm-broker.service  remotellm-connector.service
scripts/: run-test-mode.sh  run-test-portal.sh  test-docker.sh
specs/001-llm-api-bridge/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-llm-api-bridge/checklists/: requirements.md
specs/001-llm-api-bridge/contracts/: oauth-api.yaml  openapi.yaml  relay-protocol.md  tunnel-protocol.md
src/remotellm/broker/: __main__.py  admin.py  api.py  auth.py  config.py  connectors.py  health.py  main.py  preprompts.py  relay_server.py  router.py  test_auth.py  tunnel_server.py  users.py
src/remotellm/broker/templates/: base.html  chat.html  connect.html  dashboard.html  login.html  services.html  test_login.html
src/remotellm/broker/templates/admin/: connectors.html  dashboard.html  logs.html  settings.html  users.html
src/remotellm/connector/: __main__.py  config.py  health.py  llm_client.py  main.py  relay_client.py  tunnel_client.py
src/remotellm/shared/: logging.py  models.py  protocol.py
tests/: conftest.py
tests/docker/: Dockerfile.mock-llm  Dockerfile.test-runner  __init__.py  mock_llm_server.py  test_docker_startup.py  test_startup.py
tests/e2e/: test_portal_e2e.py
tests/integration/: test_error_handling.py  test_reconnection.py  test_relay_flow.py  test_web_portal.py
tests/load/: __init__.py  torture_test.py
tests/unit/: test_admin.py  test_admin_routes.py  test_api.py  test_connectors.py  test_health.py  test_llm_client.py  test_models.py  test_protocol.py  test_relay_client.py  test_relay_server.py  test_router.py  test_users.py
